--- a/discussion/index.html
+++ b/discussion/index.html
@@ -7,6 +7,6 @@
     <!-- Webpage elements -->
 
     <!-- JavaScript -->
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
